--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 /* Style the video: 100% width and height to cover the entire window */
   body {
     background: black;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif, Arial, Helvetica, sans-serif
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', Times, serif
 }
   .glow {
     font-size: 50px;
     color: rgb(232, 233, 253);
     text-align: center;
-    -webkit-animation: glow 2s ease-in-out infinite alternate;
-    -moz-animation: glow 2s ease-in-out infinite alternate;
-    animation: glow 2s ease-in-out infinite alternate;
+    -webkit-animation: glow 1s ease-in-out infinite alternate;
+    -moz-animation: glow 1s ease-in-out infinite alternate;
+    animation: glow 1s ease-in-out infinite alternate;
 }
   @-webkit-keyframes glow {
     from {
